--- a/css/s8.css
+++ b/css/s8.css
@@ -2,7 +2,15 @@
 {
     display: none;
 }
-.myimage-ssilka:hover+div
+a.myimage-ssilka:hover+div
 {
     display: block;
+}
+.ok-div
+{
+    display: block;
+}
+a.ok-ssilka:hover+div
+{
+    display: none;
 }
