--- a/css/s25.css
+++ b/css/s25.css
@@ -3,7 +3,11 @@ body{
     color:rgb(89, 67, 122);
     font-family: 'sans-serif'
 }
-header,
+h1{
+    text-align:left;
+    font-size: 68px;
+}
+
 footer {
     font-family:'sans-serif'
 }
@@ -20,9 +24,14 @@ p{
     font-family: 'sans-serif';
     
 }
-h2,
-h3,
+h3
+ {
+    text-align: center;
+    font-family: 'sans-serif';
+    font-size: 38px;
+}
 h4 {
-    color: rgb(89, 67, 122);
+    font-size: 28px;
     font-family: 'sans-serif'
 }
+
